<package format="3">
  <name>my_package</name>
  <version>0.0.0</version>
  <description>Example ROS2 package</description>
  <maintainer email="sugawararyota0813@icloud.com">Ryota Sugawara</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
